--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Бухгалтерские услуги ООО "Аудит-Консалтинг"</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="d:/Work/AuditConsultingWeb/www/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
 </head>
 <body>
 
@@ -125,8 +125,8 @@
 
     <div class="footer">
         <div class="boxed-content">
-            <div class="fleft">© 2016-2019 - auditconsalt.ru</div>
-            <div class="fright">Разработка: <a href="http://ivnt.ru" class="slink">ivnt.ru</a></div>
+            <div class="fleft">© 2016 - acons.biz</div>
+            <div class="fright">Разработка: <a href="http://infokinetika.ru" class="slink">Инфокинетика</a></div>
         </div>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
