new price and props

--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
     <div class="price anchor" id="price">
         <div class="boxed-content text-center">
             <div class="block-title">Цены</div>
-            <div class="redline"></div>
-            <a href="/docs/Audit.pdf"><div class="button">Расценки на аудит услуги</div></a>
-            <a href="/docs/Uridicheskie_uslugi.pdf"><div class="button">Расценки на юридические услуги</div></a>
-            <a href="/docs/Sdacha_otchetnosti.pdf"><div class="button">Расценки на услуги по сдаче отчетности</div></a>
+            <div class="redline"></div>            
+            <a href="/docs/price1.pdf"><div class="button">Стоимость услуг по регистрации индивидуального предпринимателя</div></a>
+            <a href="/docs/price2.pdf"><div class="button">Cтоимость бухгалтерских услуг для индивидуального предпринимателя</div></a>
+            <a href="/docs/price3.pdf"><div class="button">Стоимость бухгалтерских услуг для юридических лиц</div></a>
+            <a href="/docs/price4.pdf"><div class="button">Стоимость услуг по кадровому делопроизводству</div></a>
         </div>
     </div>
 
@@ -107,12 +108,11 @@
             <p>ООО «Аудит-Консалтинг»</p>
             <p class="address">
                 <span class="semibold">Адрес:</span> 350020 г. Краснодар,</br>
-                ул. Одесская д. 48, Литер Д,
-                офис 617 <span class="nowrap">(2-й этаж мезонин)</span>
+                ул. Одесская д. 48, д. 48, пом. 43
             </p>
 
             <p>
-                <span class="semibold">Телефоны:</span> +7 (918) 933 21 37; </br> +7 (861) 200 94 30
+                <span class="semibold">Телефон:</span> +7 (918) 933 21 37
             </p>
 
             <p>
