--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <header class="">
             <div class="logo fleft"></div>
             <div class="text fright">
-                <div class="phone text-right">+7 (918) 933 21 37</div>
-                <div class="phone text-right">+7 (861) 200 94 30</div>
+                <div class="phone text-right">+7 918 933 21 37</div>
                 <div class="email text-right"><a href="mailto:auditkonsalt2013@ya.ru" class="slink">auditkonsalt2013@ya.ru</a></div>
             </div>
         </header>
@@ -112,7 +111,7 @@
             </p>
 
             <p>
-                <span class="semibold">Телефон:</span> +7 (918) 933 21 37
+                <span class="semibold">Телефон:</span> +7 918 933 21 37
             </p>
 
             <p>
@@ -125,8 +124,8 @@
 
     <div class="footer">
         <div class="boxed-content">
-            <div class="fleft">© 2016 - acons.biz</div>
-            <div class="fright">Разработка: <a href="http://infokinetika.ru" class="slink">Инфокинетика</a></div>
+            <div class="fleft">© 2016-2019 - auditkonsalt.ru</div>
+            <div class="fright">Разработка: <a href="http://ivnt.ru/" class="slink">ivnt.ru</a></div>
         </div>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
