--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Бухгалтерские услуги ООО "Аудит-Консалтинг"</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
+    <script src="//code.jivosite.com/widget.js" data-jv-id="uYcOtxiFd6" async></script>
 </head>
 <body>
 
