--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p>ООО «Аудит-Консалтинг»</p>
             <p class="address">
                 <span class="semibold">Адрес:</span> 350020 г. Краснодар,</br>
-                ул. Одесская д. 48, д. 48, пом. 43
+                ул. Одесская д. 48, пом. 43
             </p>
 
             <p>
